k8s/minikube/api-gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-gateway
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-gateway
  template:
    metadata:
      labels:
        app: jobber-gateway
    spec:
      containers:
        - name: gateway
          image: ronasunil/jobber-gateway:latest

          resources:
            limits:
              cpu: "850m"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "700Mi"

          ports:
            - name: gateway
              containerPort: 2000
