k8s/minikube/api-gateway-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jobber-gateway
  namespace: development
spec:
  type: NodePort
  selector:
    app: jobber-gateway
  ports:
    - name: gateway
      port: 2000
      targetPort: 2000
      nodePort: 30000
