k8s/minikube/api-gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobber-gateway
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: jobber-gateway
      port:
        number: 30000
  rules:
    - host: jobber.com
      http:
        paths:
          - path: /gateway/api/v1/*
            pathType: Prefix
            backend:
              service:
                name: jobber-gateway
                port:
                  number: 2000
